syntax = "proto3";
package chat;

service Chat {
    rpc Send(SendRequest) returns (SendResponse) {}
    rpc CircuitBreaker(CircuitBreakerRequest) returns (CircuitBreakerResponse) {}
}

message SendRequest {
    string message = 1;
}

message SendResponse {
    string message = 1;
    string sha = 2;
}

message CircuitBreakerRequest {
    int32 failureThreshold = 1;
    int32 attempts = 2;
    int32 timeout = 3;
}

message CircuitBreakerResponse {
    string message = 1;
}